horizontal scroll in homepage fix

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -31,7 +31,7 @@
 
   .map-filter-image {
     height: 100%;
-    width: 1280px;
+    width: 1260px;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
